[package]
name = "atlasser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-math3d = "0.9.21"
fontdue = "0.7.2"
rect_packer = "0.2.1"
png = "0.17.7"
clap = {version = "4.1.1", features =["derive"] }

[profile.release]
panic = 'abort'
opt-level = "z"
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
rpath=false
codegen-units=1